--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -43,6 +43,7 @@
     <string name="scan_a_barcode">扫描二维码</string>
     <string name="home_greeting">您好，&#160;%1$s</string>
     <string name="home_recommendation_title">您可能喜欢的产品：</string>
+    <string name="home_no_recommendation_title">抱歉，暂时没有可推荐的产品，请收藏或扫描更多产品以触发此功能。</string>
     <string name="dialog_camera_permission_title">摄像头访问未启用</string>
     <string name="dialog_camera_permission_msg">此活动需要相机权限才能进行，请通过”设置“ -> "应用信息" -> "Scannera" 来开启权限.</string>
     <string name="dialog_btn_reject">拒绝</string>
