--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -60,6 +60,7 @@
     <string name="on_rating_empty_msg">请给我们打个分 :D</string>
     <string name="on_feedback_empty_msg">请麻烦以写一些反馈来让我们知道您的想法 :D</string>
     <string name="feedback_success">提交成功！非常感谢您的反馈！</string>
+    <string name="enter_message_hint">请在此输入消息</string>
     <string name="loading">加载中…</string>
     <string name="loading_dialog_tag">Loading Dialog</string>
     <string name="product_not_found">未找到产品</string>
@@ -190,4 +191,5 @@
     <string name="nutrition_pic_content_description">用户拍摄的产品营养表图片。</string>
     <string name="product_look_content_description">用户拍摄的产品外观图片。</string>
     <string name="product_star_btn_content_description">用于收藏此产品的星型按钮。</string>
+    <string name="message_send_btn_content_description">一个发送消息的按钮。</string>
 </resources>
