--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -111,7 +111,7 @@
     <string name="sort_products">排序下列产品：</string>
     <string name="descending">从高到低</string>
     <string name="product_reviews">产品评价</string>
-    <string name="write_a_review">写评价</string>
+    <string name="write_a_review">撰写评价</string>
     <string name="total_num_of_reviews">共&#160;%1$d&#160;条评价</string>
     <string name="review_successful_submit">非常感谢您的产品评价! 您获得了%1$d贡献值！</string>
     <string name="farewell_user_on_delete">成功删除账号，祝一切顺利并期待下次再见！</string>
