--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="forgotten_password_instruction">Please enter the email associated with your account, and we will send you an email with the password reset instruction.</string>
     <string name="password_reset_email_subejct">Scannera Password Reset Instruction</string>
     <string name="password_reset_email_content">Dear user,
-        \n\nA request has been received to reset your password for your Scannera account.\n\nPlease find your temporary password below, and follow this instruction:\n\n
+        \n\nA request has been received to reset your password for your Scannera account.\n\nPlease find your temporary password below, and follow the below instruction:\n\n
         1. Log in to the Scannera app with the temporary password below.\n
         2. Click \"Account\" at the bottom.\n
         3. Click \"Account Information\".\n
