Implemented user profile image view and camera fab edit button, enlarged user profile image view on click, in the AccountInfoActivity.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -182,6 +182,7 @@
     <string name="bot_setup_io_exception_error">抱歉，由于IO异常未能成功连接上服务端。</string>
     <string name="bot_reply_error">抱歉，由于内部错误导致了未能成功接收另一端的消息。</string>
     <string name="collect_contributed_product_data_error">抱歉，由于内部错误导致了输入的信息处理未成功，请稍后再试。</string>
+    <string name="user_image_empty_error">用户头像还未添加，请先通过右下角相机按钮添加头像。</string>
     <string name="product_image_empty_error">抱歉，暂时还没有关于此产品的图片。</string>
 
     <!-- ACCESSIBILITY RELATED -->
@@ -202,4 +203,5 @@
     <string name="product_look_content_description">用户拍摄的产品外观图片。</string>
     <string name="product_star_btn_content_description">用于收藏此产品的星型按钮。</string>
     <string name="message_send_btn_content_description">一个发送消息的按钮。</string>
+    <string name="edit_user_profile_img_fab_content_description">一个更换用户头像的按钮。</string>
 </resources>
