--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,6 +6,8 @@
     <string name="login">登录</string>
     <string name="or_login_with">或者</string>
     <string name="signup">注册</string>
+    <string name="already_have_an_acc_hint">已有账号？</string>
+    <string name="login_here"><u>请在此登录</u></string>
     <string name="forgotten_password"><u>忘记密码？</u></string>
     <string name="dont_have_an_acc_tv">还没有账号？</string>
     <string name="create_account">创建账号</string>
