--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="login">Login</string>
     <string name="or_login_with">Or login with</string>
     <string name="signup">Sign Up</string>
+    <string name="already_have_an_acc_hint">Already have an account?</string>
+    <string name="login_here"><u>login here</u></string>
     <string name="forgotten_password"><u>Forgotten password?</u></string>
     <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
     <string name="create_account">Create Account</string>
