--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -97,6 +97,9 @@
     <string name="lastname_default">/{姓氏}/</string>
     <string name="email_address_default">/{电子邮箱}/</string>
     <string name="password_default">/{密码}/</string>
+    <string name="select_profile_image">选取头像</string>
+    <string name="select_from_album">从相册中选取</string>
+    <string name="take_a_photo">拍摄照片</string>
     <string name="delete_account">删除我的账号</string>
     <string name="dialog_delete_account_title">您确定要删除您的帐户吗？</string>
     <string name="dialog_delete_account_msg">
