Set up the confirm selected image fragment for profile image selection

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -100,6 +100,8 @@
     <string name="select_profile_image">选取头像</string>
     <string name="select_from_album">从相册中选取</string>
     <string name="take_a_photo">拍摄照片</string>
+    <string name="preview_profile_image">预览用户头像</string>
+    <string name="confirm_user_image_hint">您确定要使用此照片为您的用户头像吗？</string>
     <string name="delete_account">删除我的账号</string>
     <string name="dialog_delete_account_title">您确定要删除您的帐户吗？</string>
     <string name="dialog_delete_account_msg">
