--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,8 @@
     <string name="select_profile_image">Select profile image</string>
     <string name="select_from_album">Select from photo album</string>
     <string name="take_a_photo">Take a photo</string>
+    <string name="preview_profile_image">Preview Profile Image</string>
+    <string name="confirm_user_image_hint">Are you sure to use this as your profile image?</string>
     <string name="delete_account">Delete My Account</string>
     <string name="dialog_delete_account_title">Are you sure you want to delete your account?</string>
     <string name="dialog_delete_account_msg">
