--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -46,8 +46,8 @@
     <string name="home_greeting">您好，&#160;%1$s</string>
     <string name="home_recommendation_title">您可能喜欢的产品：</string>
     <string name="home_no_recommendation_title">抱歉，暂时没有可推荐的产品，请收藏或扫描更多产品以触发此功能。</string>
-    <string name="dialog_camera_permission_title">摄像头访问未启用</string>
-    <string name="dialog_camera_permission_msg">此活动需要相机权限才能进行，请通过”设置“ -> "应用信息" -> "Scannera" 来开启权限.</string>
+    <string name="dialog_permission_required_title">%1$s访问未启用</string>
+    <string name="dialog_permission_required_msg">此活动需要%1$s权限才能进行，请通过”设置“ -> "应用信息" -> "Scannera" 来开启权限.</string>
     <string name="dialog_btn_reject">拒绝</string>
     <string name="dialog_btn_enable">开启</string>
     <string name="search">搜索</string>
@@ -125,7 +125,8 @@
     <string name="total_num_of_reviews">共&#160;%1$d&#160;条评价</string>
     <string name="review_successful_submit">非常感谢您的产品评价! 您获得了%1$d贡献值！</string>
     <string name="farewell_user_on_delete">成功删除账号，祝一切顺利并期待下次再见！</string>
-
+    <string name="camera">相机</string>
+    <string name="external_storage">外部储存</string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
