--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="farewell_user_on_delete">User account successfully deleted, all the best and hope to see you again!</string>
     <string name="camera">Camera</string>
     <string name="external_storage">Files and media</string>
+    <string name="user_pimg_updated">Your profile image is successfully updated!</string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
