Integrated privacy policy and terms and conditions web views to the App. Updated the APK file.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -128,6 +128,8 @@
     <string name="camera">相机</string>
     <string name="external_storage">外部储存</string>
     <string name="user_pimg_updated">您的用户头像已更换成功！</string>
+    <string name="privacy_policy"><u>隐私权政策</u></string>
+    <string name="terms_and_conditions"><u>条款和条件</u></string>
 
     <!-- Category Dropdown Menu String Array -->
     <string-array name="categories">
