--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Scannera</string>
     <string name="app_email_address" translatable="false">scannera.customerservice@gmail.com</string>
     <string name="app_email_address_password" translatable="false">fit3162scannera</string>
-    <string name="app_authority" translatable="false">com.example.food_product_comparison_android_app</string>
+    <string name="app_authority" translatable="false">com.fit3162.scannera_app</string>
     <string name="scannera_privacy_policy_url" translatable="false">https://sites.google.com/view/scannera-app-privacy-policy/%E9%A6%96%E9%A1%B5</string>
     <string name="scannera_terms_and_conditions_url" translatable="false">https://sites.google.com/view/scannera-app-terms-conditions/%E9%A6%96%E9%A1%B5</string>
     <string name="welcome_to_scannera">Hi %1$s, welcome to Scannera!</string>
