Fixed invalid authority issue. Added missing translation.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -152,7 +152,7 @@
         <item>口香糖和薄荷糖</item>
         <item>巧克力</item>
         <item>棒棒糖</item>
-        <item>Popcorn</item>
+        <item>爆米花</item>
         <item>薯条/薯片</item>
         <item>面条</item>
         <item>酱汁</item>
