--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,7 @@
     <string name="product_price">Product Original Price:</string>
     <string name="product_category">Product Category:</string>
     <string name="product_nutrition_info">Product Nutrition Information:</string>
-    <string name="product_look">Product Look Picture:</string>
+    <string name="product_pic">Picture of the product:</string>
     <string name="retake_tvbtn"><u>retake</u></string>
     <string name="edit_tvbtn"><u>edit</u></string>
     <string name="close">Close</string>
@@ -125,7 +125,7 @@
     <string name="price">Price:</string>
     <string name="nutri_info_with_units">Nutrition Information:\n(Per 100 g/mL/kJ)</string>
     <string name="similar_products">Similar Products</string>
-    <string name="sort_products">Sort The Similar Products:</string>
+    <string name="sort_products">Sort Similar Products:</string>
     <string name="descending">High to Low</string>
     <string name="nutrition_degree_low">Low</string>
     <string name="nutrition_degree_normal">Normal</string>
@@ -227,7 +227,7 @@
     <string name="back_btn_content_description">A back button</string>
     <string name="close_btn_content_description">A close button</string>
     <string name="nutrition_pic_content_description">A picture of the product\'s nutrition table taken by the user.</string>
-    <string name="product_look_content_description">A picture of the product look taken by the user.</string>
+    <string name="product_look_content_description">A picture of the product itself taken by the user.</string>
     <string name="product_star_btn_content_description">A Star button for starring the product.</string>
     <string name="message_send_btn_content_description">A Send message button.</string>
     <string name="edit_user_profile_img_fab_content_description">A button for editing user profile image.</string>
