--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -177,7 +177,7 @@
     <string name="email_input_error">电子邮件地址格式无效，请重新检查。</string>
     <string name="email_address_taken_error">此电子邮箱已被注册。</string>
     <string name="email_user_not_registered_error">此电子邮箱尚未注册，请先注册。</string>
-    <string name="username_input_error">抱歉，用户名不应包含任何特殊字符（比如, !@#$%^&amp;*）。</string>
+    <string name="username_input_error">抱歉，用户名不应包含任何空格或特殊字符（比如, !@#$%^&amp;*）。</string>
     <string name="username_taken_error">此用户名已注册。</string>
     <string name="password_input_too_short_error">抱歉,密码必须至少包含%1$d位数。</string>
     <string name="password_input_no_upper_lower_cases_error">抱歉，密码必须至少包含一个小写和一个大写字符。</string>
